Fix SearchSpaceReport map to preserve insertion order via Collections.unmodifiableMap